# vRTU

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  enumtype.cpp  enumtype.hpp
SCL/: SCL.vcxproj  SCL.vcxproj.filters  enumtype.hpp  vRTU.sln
TestSCL/: TestSCL.vcxproj
app/: baserequest.cpp  baserequest.hpp  httpconnection.cpp  httpconnection.hpp  rtuapp.cpp  rtuapp.hpp  startarg.cpp  startarg.hpp
datamodel/: basecontrol.cpp  basecontrol.hpp  baseelement.cpp  baseelement.hpp
scl/: CMakeLists.txt
scl/include/: basicvalue.hpp  basicvaluefactory.hpp  dataattribute.hpp  dataobject.hpp  datatemplatecontainer.hpp  enums.hpp  enumtype.hpp  iecdataelement.hpp  objectreference.hpp
scl/source/: basicvalue.cpp  basicvaluefactory.cpp  dataattribute.cpp  dataobject.cpp  datatemplatecontainer.cpp  enumtype.cpp  iecdataelement.cpp  objectreference.cpp
scl/tests/: test_scl_templates.cpp
telecontrol/: basepropertylist.cpp  basepropertylist.hpp  enumtype.hpp  iec104data.cpp  iec104data.hpp  iec104properties.cpp  iec104properties.hpp  iec104quality.cpp  iec104quality.hpp  iec104server.cpp  iec104server.hpp  iec104smartpointer.hpp  iec104timestamp.cpp  iec104timestamp.hpp  serverparameter.hpp  staticenums.cpp  staticenums.hpp  telecontrolserverinterface.hpp
telecontrol/http/: resourcepath.cpp  resourcepath.hpp
tests/: CMakeLists.txt  mock_testclient.hpp  test_datamodel.cpp  test_resourcepath.cpp  test_telecontrol.cpp
tests/curl/: generic_get_empty_body.sh
tests/source/: test_basic_values.cpp  test_scl_templates.cpp
util/: watchdog.cpp  watchdog.hpp
